--- a/AzertyGitHub/MainWindow.xaml
+++ b/AzertyGitHub/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded" >
     <Grid>
-        <Button Content="Azerty"></Button>
+        <Button Content="Demo SIO2"></Button>
     </Grid>
 </Window>
